third_party/WebKit/Source/WebCore/rendering/RenderThemeMac.h
@@ -220,7 +220,7 @@ private:
     NSMenu* searchMenuTemplate() const;
     NSSliderCell* sliderThumbHorizontal() const;
     NSSliderCell* sliderThumbVertical() const;
-    NSTextFieldCell* textField() const;
+    NSTextFieldCell* textField(bool useNewGradient) const;
 
 #if ENABLE(METER_TAG)
     NSLevelIndicatorStyle levelIndicatorStyleFor(ControlPart) const;
